rebirth-responsive: fixed modal height, some other responsive layout bugs

--- a/src/modules/app/less/app.less
+++ b/src/modules/app/less/app.less
@@ -5,7 +5,6 @@ html,
 body {
   width: 100%;
   height: 100%;
-  min-height: 380px;
   min-width: 360px;
   overflow: auto;
   background-color: @color-background-default;
@@ -412,8 +411,8 @@ md-toolbar:not(.md-menu-toolbar) {
       width: calc(100% ~' - 20px');
       max-width: 540px;
       min-width: 340px;
-      height: 82vh;
-      max-height: 82vh;
+      height: 85vh;
+      max-height: 85vh;
       left: 50%;
       top: 50%;
       transform-origin: center;
