--- a/src/modules/ui/directives/transactionInfo/transactionInfo.less
+++ b/src/modules/ui/directives/transactionInfo/transactionInfo.less
@@ -89,7 +89,7 @@ w-transaction-info {
         color: @color-basic-900;
 
         &:not(.text) {
-          max-width: 90%;
+          max-width: 80%;
           word-wrap: break-word;
         }
       }
