--- a/src/modules/utils/modals/assetInfo/assetInfo.less
+++ b/src/modules/utils/modals/assetInfo/assetInfo.less
@@ -27,7 +27,8 @@ html body md-dialog.asset-info-modal {
       bottom: 0;
     }
 
-    .chart-tooltip, .chart-legend { // Lib ng3-charts
+    .chart-tooltip,
+    .chart-legend { // Lib ng3-charts
       display: none !important;
     }
   }
@@ -168,6 +169,10 @@ html body md-dialog.asset-info-modal {
   html body md-dialog.asset-info-modal {
     padding-bottom: 0;
 
+    md-dialog-content {
+      overflow-y: auto;
+    }
+
     .chart-wrapper {
       margin-left: -20px;
       margin-right: -20px;
@@ -179,7 +184,7 @@ html body md-dialog.asset-info-modal {
       }
 
       .tab-tem {
-        max-height: calc(100vh ~'- 298px');
+        max-height: 100%;
         padding: 0;
 
         .line {
